# TalkToPDF

./: .dockerignore  .env.docker.example  .env.example  .gitignore  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  dockerfile  main.py  package.json  pyproject.toml  test_metrics_generation.py  verify_metrics_setup.py
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 089e4eb2fb0f_add_embed_signature_to_chunk_embeddings.py  55004a34fc4e_create_chats_and_chat_messages2.py  6691aa5d8877_init_schema_with_vector.py  6a0872ef034f_add_citations_to_chat_messages.py  a1b2c3d4e5f6_add_metrics_to_chat_messages.py  cd784ebc62bd_add_chunks_tsvector_and_gin_index.py  d397e72d05ee_add_storage_path_to_document_indexes.py
docker/db/init/: 02_test_db.sql
src/talk_to_pdf/: cli.py
src/talk_to_pdf/backend/app/: exception_handlers.py  main.py  runner.py
src/talk_to_pdf/backend/app/api/v1/: router.py
src/talk_to_pdf/backend/app/application/common/: dto.py  interfaces.py  progress.py
src/talk_to_pdf/backend/app/application/indexing/: dto.py  interface.py  interfaces.py  mappers.py  progress.py
src/talk_to_pdf/backend/app/application/projects/: dto.py  mappers.py
src/talk_to_pdf/backend/app/application/reply/: dto.py  interfaces.py  mappers.py
src/talk_to_pdf/backend/app/application/retrieval/: interfaces.py  mappers.py  mergers.py  value_objects.py
src/talk_to_pdf/backend/app/application/users/: __init__.py  dto.py  (+2 more)
src/talk_to_pdf/backend/app/core/: __init__.py  config.py  const.py  deps.py  security.py
src/talk_to_pdf/frontend/react/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/talk_to_pdf/frontend/react/src/: index.css  main.tsx
src/talk_to_pdf/frontend/streamlit_app/: main.py  runner.py  settings.py
src/talk_to_pdf/frontend/streamlit_app/components/: auth_forms.py
src/talk_to_pdf/frontend/streamlit_app/pages/: 0_home.py  1_login.py  2_register.py  3_project.py
src/talk_to_pdf/frontend/streamlit_app/services/: api.py
src/talk_to_pdf/frontend/streamlit_app/ui/: auth.py  layout.py
src/talk_to_pdf/shared/: proc.py
tests/: conftest.py
tests/integration/infrastructure/: conftest.py
tests/integration/infrastructure/indexing/: test_chunk_embedding_repository.py  test_chunk_vector_repository.py  test_indexing_repository.py  test_start_indexing_use_case.py  test_worker_extract_preview.py
tests/integration/infrastructure/projects/: test_create_project.py  test_project_repositories.py
tests/integration/infrastructure/reply/: test_create_chat_message_use_case.py  test_create_chat_usecase.py  test_reply_repositories.py
tests/integration/infrastructure/retrieval/: test_build_index_context_use_case.py
tests/integration/infrastructure/users/: test_get_current_user.py  test_login_user.py  test_register_user.py  test_user_repositories.py
tests/unit/application/indexing/: test_start_indexing_use_case.py
tests/unit/application/users/: test_login_user.py  test_register_user.py
tests/unit/fakes/: chunk_repo.py  hasher.py  indexing_repos.py  indexing_runner.py  indexing_worker_deps.py  project_repo.py  project_storage.py  uow.py  user_repo.py
tests/unit/infrastructure/indexing/: test_grobid_block_pipeline.py  test_worker_service_unit.py
(+153 files in other folders)
