[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "talktopdf"
version = "0.1.0"
description = "Talk to your PDF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]



[project.optional-dependencies]
ui = [
  "streamlit>=1.38",
  "pandas-stubs>=2.2",
]

dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
]


# optional CLI commands
[project.scripts]
talk = "talk_to_pdf.cli:main"




# tell setuptools where to find your package (under src/)
[tool.setuptools.packages.find]
where = ["src"]
include = ["talk_to_pdf*"]
