[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "talktopdf"
version = "0.2.0"
description = "Talk to your PDF"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "langchain[openai]>=1.2.0",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.12.0",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.4.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "tiktoken>=0.5.0",
    "uvicorn[standard]>=0.38.0",
    "streamlit>=1.38",
    "pandas-stubs>=2.2"
]




[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
]


[tool.hatch.build.targets.wheel]
packages = ["src/talk_to_pdf"]





[tool.coverage.run]
source = ["src"]
include = ["talk_to_pdf*"]
omit = ["*/tests/*", "*/test_*.py"]




[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
